--- a/SistemaVeterinaria/.env
+++ b/SistemaVeterinaria/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sistemaveterinaria0.3
+DB_DATABASE=sistemaveterinaria
 DB_USERNAME=root
-DB_PASSWORD=''
+DB_PASSWORD='xzaetil'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
